--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Flask==2.3.0
-opencv-python>=4.10.0,<5
+opencv-contrib-python-headless>=4.10.0,<5
 mediapipe>=0.10.5,<0.11
-numpy==1.24.0
+numpy>=1.24.0,<2.0
 
